crates/service/tests/formatting/snapshots/features__formatting__range__format_comments.snap
---
source: crates/service/tests/formatting/range.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 3,
        "character": 6
      },
      "end": {
        "line": 3,
        "character": 6
      }
    },
    "newText": " "
  }
]
