crates/service/tests/formatting/snapshots/features__formatting__range__fully_covered_node.snap
---
source: crates/service/tests/formatting/range.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 3,
        "character": 5
      },
      "end": {
        "line": 3,
        "character": 6
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 16
      },
      "end": {
        "line": 3,
        "character": 19
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 20
      },
      "end": {
        "line": 3,
        "character": 21
      }
    },
    "newText": ""
  }
]
